- Center aligning titles for blog posts and for about me page - Trying background-size: cover instead of 100% to see if that causes it to stay fixed on mobile devices

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -5,7 +5,7 @@ body {
     padding-bottom: 20px;
     background-image: url("../images/gray-metal-cubes-decorative-1005644.jpg");
     background-repeat: repeat-y;
-    background-size: 100%;
+    background-size: cover;
     background-attachment: fixed;
 }
 
